corrected the naming of the image

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
   <!-- landing page start -->
      <div class="toppage">
      <div class="toptext">
-     <img src="images/betty.jpeg" alt="gakii" />
+     <img src="image/bett.jpeg" alt="Betty" />
      <h1><em>Chepkirui Betty</em></h1>
      <p>Web Designer</p>
      </div>
